--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,3 +73,16 @@ body{
   position: absolute;
   bottom: 0px;
 }
+
+.modal-header {
+  background: $background-dark;
+  color: floralwhite;
+  button {
+    color: floralwhite;
+  }
+}
+
+.modal-content {
+  background: $background-pale;
+}
+
